k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: backend }
spec:
  replicas: 2
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      containers:
        - name: backend
          image: gcr.io/heroic-goal-429313-b3/chess-backend:latest
          ports: [ { containerPort: 8000 } ]
---
apiVersion: v1
kind: Service
metadata: { name: backend }
spec:
  selector: { app: backend }
  ports: [ { port: 8000, targetPort: 8000 } ]
  type: ClusterIP
